deploy/base/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: watchclub
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: watchclub
    component: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: watchclub
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: watchclub
      component: frontend
  template:
    metadata:
      labels:
        app: watchclub
        component: frontend
    spec:
      imagePullSecrets:
      - name: ghcr-credentials
      containers:
      - name: nginx
        image: ghcr.io/cartermckinnon/watchclub/ui:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
